fix sign-in link vertical position (which was too low since some time)

--- a/assembl/static/css/components/_nav-bar.scss
+++ b/assembl/static/css/components/_nav-bar.scss
@@ -159,6 +159,13 @@ $textProfile: #515151;
     .joinDiscussion {
 
     }
+
+    .sign-in-link {
+      display: inline;
+      vertical-align: middle;
+      line-height: $theme_header_height;
+      height: 100%;
+    }
   }
 }
 
